tests/results/syntax_errors/missing_close_par.own
compile::stdout 0

compile::stderr 5
tests/inputs/syntax_errors/missing_close_par.own:2:3:[1;31merror[0;39m:opening `(` is unmatched
     1 | 
     2 | 8*(9 + 158
       |   ^
     3 | 

compile::return_code 1

